Some little fixes